--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     <link rel="icon" href="/favicon.ico">
     <title>Ирвас окна</title>
     <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-    <!-- Slick Slider -->
     <link rel="stylesheet" href="assets/slick/slick.css">
     <link rel="stylesheet" href="assets/slick/slick-theme.css">
-    <!-- Animate -->
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link href="assets/css/style.css" rel="stylesheet">
   </head>
@@ -53,7 +50,7 @@
           <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="contact_us">
               <div class="contact_us_wrap">
-                <a href="#"><img src="assets/img/header/phone.png" alt="#">+7 (495) 646-61-71</a>
+                <a href="#"><img src="assets/img/header/phone.png" alt="#">+3 (097) 646-61-71</a>
                 <a class="phone_link" href="#">Заказать обратный звонок</a>
               </div>
             </div>
@@ -69,7 +66,7 @@
         <div class="row">
 
           <div class="col-lg-6 col-md-7 wow fadeInLeft">
-            <h1><span>Остекление балконов "под ключ"<br></span>за 12 800 рублей!</h1>
+            <h1><span>Остекление балконов "под ключ"<br></span>за 4 800 гривен!</h1>
             <div class="main_features">
 
              <div class="row">
@@ -169,7 +166,7 @@
              </ul>
            </div> 
             <div class="glazing_price">
-                <p>2600 руб.кв.м.<br><span>под ключ с установкой</span></p>
+                <p>2600 грн.кв.м.<br><span>под ключ с установкой</span></p>
                 <button class="button glazing_price_btn text-uppercase popup_calc_btn">Рассчитать стоимость</button>
             </div>
           </div>
@@ -186,7 +183,7 @@
               </ul>
             </div> 
              <div class="glazing_price">
-                 <p>4000 руб.кв.м.<br><span>под ключ с установкой</span></p>
+                 <p>4000 грн.кв.м.<br><span>под ключ с установкой</span></p>
                  <button class="button glazing_price_btn text-uppercase popup_calc_btn">Рассчитать стоимость</button>
              </div>
           </div>
@@ -208,7 +205,7 @@
              </ul>
            </div> 
             <div class="glazing_price">
-                <p>4000 руб.кв.м.<br><span>под ключ с установкой</span></p>
+                <p>41000 грн.кв.м.<br><span>под ключ с установкой</span></p>
                 <button class="button glazing_price_btn text-uppercase popup_calc_btn">Рассчитать стоимость</button>
             </div>
           </div>
@@ -225,7 +222,7 @@
               </ul>
             </div> 
              <div class="glazing_price">
-                 <p>8000 руб.кв.м.<br><span>под ключ с установкой</span></p>
+                 <p>8000 грн.кв.м.<br><span>под ключ с установкой</span></p>
                  <button class="button glazing_price_btn text-uppercase popup_calc_btn">Рассчитать стоимость</button>
              </div>
           </div>
@@ -247,7 +244,7 @@
               </ul>
             </div> 
              <div class="glazing_price">
-                 <p>5500 руб.кв.м.<br><span>под ключ с установкой</span></p>
+                 <p>5500 грн.кв.м.<br><span>под ключ с установкой</span></p>
                  <button class="button glazing_price_btn text-uppercase popup_calc_btn">Рассчитать стоимость</button>
              </div>
           </div>
@@ -269,7 +266,7 @@
              </ul>
            </div> 
             <div class="glazing_price">
-                <p>5500 руб.кв.м.<br><span>под ключ с установкой</span></p>
+                <p>5500 грн.кв.м.<br><span>под ключ с установкой</span></p>
                 <button class="button glazing_price_btn text-uppercase popup_calc_btn">Рассчитать стоимость</button>
             </div>
           </div>
@@ -286,7 +283,7 @@
               </ul>
             </div> 
              <div class="glazing_price">
-                 <p>8000 руб.кв.м.<br><span>под ключ с установкой</span></p>
+                 <p>8000 грн.кв.м.<br><span>под ключ с установкой</span></p>
                  <button class="button glazing_price_btn text-uppercase popup_calc_btn">Рассчитать стоимость</button>
              </div>
           </div>
@@ -308,7 +305,7 @@
              </ul>
            </div> 
             <div class="glazing_price">
-                <p>4000 руб.кв.м.<br><span>под ключ с установкой</span></p>
+                <p>4000 грн.кв.м.<br><span>под ключ с установкой</span></p>
                 <button class="button glazing_price_btn text-uppercase popup_calc_btn">Рассчитать стоимость</button>
             </div>
           </div>
@@ -325,7 +322,7 @@
               </ul>
             </div> 
              <div class="glazing_price">
-                 <p>8000 руб.кв.м.<br><span>под ключ с установкой</span></p>
+                 <p>8000 грн.кв.м.<br><span>под ключ с установкой</span></p>
                  <button class="button glazing_price_btn text-uppercase popup_calc_btn">Рассчитать стоимость</button>
              </div>
           </div>
@@ -378,35 +375,35 @@
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/material/lining.png" alt="#">
                      <h3>Вагонка</h3>
-                     <p>600 руб. кв.м.<span>с материалом</span></p>
+                     <p>600 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/material/plastic.png" alt="#">
                      <h3>Пластиковая вагонка</h3>
-                     <p>750 руб. кв.м.<span>с материалом</span></p>
+                     <p>750 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/material/pvh.png" alt="#">
                      <h3>ПВХ-панели</h3>
-                     <p>800 руб. кв.м.<span>с материалом</span></p>
+                     <p>800 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/material/laminate.png" alt="#">
                      <h3>Настил пола <br>из ламината</h3>
-                     <p>1250 руб. кв.м.<span>с материалом</span></p>
+                     <p>1250 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/material/tree.png" alt="#">
                      <h3>Настил пола <br>из дерева</h3>
-                     <p>1650 руб. кв.м.<span>с материалом</span></p>
+                     <p>1650 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                </div>
@@ -436,35 +433,35 @@
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/2/metal.png" alt="#">
                      <h3>Металлический <br>сайдинг</h3>
-                     <p>600 руб. кв.м.<span>с материалом</span></p>
+                     <p>600 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/2/plastic.png" alt="#">
                      <h3>Пластиковая <br>вагонка</h3>
-                     <p>750 руб. кв.м.<span>с материалом</span></p>
+                     <p>750 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/2/profnastil.png" alt="#">
                      <h3>Профнастил</h3>
-                     <p>800 руб. кв.м.<span>с материалом</span></p>
+                     <p>800 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/2/tree.png" alt="#">
                      <h3>Деревянная <br>вагонка</h3>
-                     <p>1250 руб. кв.м.<span>с материалом</span></p>
+                     <p>1250 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/2/vinil.png" alt="#">
                      <h3>Виниловый <br>сайдинг</h3>
-                     <p>1650 руб. кв.м.<span>с материалом</span></p>
+                     <p>1650 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                </div>
@@ -495,28 +492,28 @@
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/3/aluminum.png" alt="#">
                      <h3>Алюминиевый <br>профиль</h3>
-                     <p>600 руб. кв.м.<span>с материалом</span></p>
+                     <p>600 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/3/bezram.png" alt="#">
                      <h3>Безрамное <br>остекление</h3>
-                     <p>750 руб. кв.м.<span>с материалом</span></p>
+                     <p>750 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/3/pvh.png" alt="#">
                      <h3>ПВХ <br>профиль</h3>
-                     <p>800 руб. кв.м.<span>с материалом</span></p>
+                     <p>800 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/3/tree.png" alt="#">
                      <h3>Деревянный <br>профиль</h3>
-                     <p>1250 руб. кв.м.<span>с материалом</span></p>
+                     <p>1250 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                </div>
@@ -547,35 +544,35 @@
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/4/gofrolist.png" alt="#">
                      <h3>Гофролист</h3>
-                     <p>600 руб. кв.м.<span>с материалом</span></p>
+                     <p>600 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/4/metallocherepitsa.png" alt="#">
                      <h3>Металлочерепица</h3>
-                     <p>750 руб. кв.м.<span>с материалом</span></p>
+                     <p>750 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/4/ondulin.png" alt="#">
                      <h3>Ондулин</h3>
-                     <p>800 руб. кв.м.<span>с материалом</span></p>
+                     <p>800 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/4/polikarbonat.png" alt="#">
                      <h3>Поликарбонат</h3>
-                     <p>1250 руб. кв.м.<span>с материалом</span></p>
+                     <p>1250 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                    <div class="decoration_content_material text-center">
                      <img src="assets/img/decoration/4/steklopaket.png" alt="#">
                      <h3>Стеклопакет</h3>
-                     <p>1650 руб. кв.м.<span>с материалом</span></p>
+                     <p>1650 грн. кв.м.<span>с материалом</span></p>
                    </div>
                  </div>
                </div>
